test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/setter-creator.widl
// Extracted from http://dev.w3.org/2006/webapi/WebIDL/ on 2011-05-06
interface OrderedMap {
  setter creator void set(DOMString name, any value);
};
